login and messages

--- a/app/views/account/lost_password.html.erb
+++ b/app/views/account/lost_password.html.erb
@@ -9,3 +9,9 @@
 
 <% end %>
 </div>
+
+<% if Setting.lost_password? %>
+  <div class='fs-pass'>
+    <%= link_to l(:label_password_recovery), :controller => 'account', :action => 'password_recovery' %>
+  </div>
+<% end %>
