--- a/app/views/account/password_recovery.html.erb
+++ b/app/views/account/password_recovery.html.erb
@@ -13,3 +13,13 @@
 </div>
 <p><%= submit_tag l(:button_save) %></p>
 <% end %>
+
+<% if Setting.lost_password? %>
+  <div class='fs-pass'>
+    <%= link_to l(:label_password_lost), :controller => 'account', :action => 'lost_password' %>
+  </div>
+<% end %>
+
+<div class='fs-pass'>
+  <%= link_to l(:label_register), :controller => 'account', :action => 'register' %>
+</div>
