--- a/app/views/services/condition.html.erb
+++ b/app/views/services/condition.html.erb
@@ -40,18 +40,9 @@
         <td colspan="2" align="left" valign="top" class="privacy">
           <div class="toggler">
             <div id="effect" class="newClass ui-corner-all">
-<p>
-A seguito della registrazione, l'utente usufruisce del libero accesso ad ogni partizione del sito www.fiscosport.it  per un periodo di prova gratuita di 40 giorni (che si riduce a 10 giorni se il sistema riconosce l'utente già registrato con altro codice e che si azzera se lo stesso utente effettua la registrazione con tre diversi codici per usufruire più volte della registrazione gratuita).
-</p> <br />
-<p>
-Il periodo gratuito aumenta di 60 giorni se l’utente utilizza un codice promozione/segnalatore (se ne è in possesso) oppure se viene segnalato da un collaboratore o da un utente Fiscosport abilitato. Per maggiori informazioni contattare la Segreteria Fiscosport (dal lunedì al venerdì: tel. 0183/76.72.06 – e-mail: segreteria@fiscosport.it). Il periodo è maggiore se abilitato da CONI/FSN/DSA/EPS aderente al progetto 2007-2010 (es. 31/12/2010 per i C.R. e C.P. CONI o Fsn/Dsa/Eps aderenti).
-</p> <br />
-<p>
-La registrazione gratuita dell'utente, in ogni caso, non impegna lo stesso per il futuro, in quanto al termine del periodo gratuito verranno automaticamente disattivate le chiavi di accesso alla partizione riservata (>>), mentre potrà sempre mantenere la posizione per consultare la partizione gratuita (>>) e ricevere le e-mail di segnalazione degli aggiornamenti e delle novità.
-</p> <br />
-<p>
-L’utente autorizza fin d'ora FISCOSPORT srl all'invio tramite e-mail delle NEWSLETTERS all'indirizzo di posta elettronica indicato sopra, e-mail che potranno contenere oltre alle informazioni di natura fiscale, eventuali banner pubblicitari
-</p>
+
+              <%= Setting.template_condition %>
+
             </div>
           </div>
         </td>
