--- a/app/views/services/privacy.html.erb
+++ b/app/views/services/privacy.html.erb
@@ -42,7 +42,8 @@
         <td colspan="2" align="left" valign="top" class="privacy">
           <div class="toggler">
             <div id="effect" class="newClass ui-corner-all">
-INFORMATIVA D.Lgs. 30/6/2003 n. 196 - "Riservatezza dei dati personali":<br /> FISCOSPORT srl, editore e titolare del sito, La informano che i Suoi dati verranno trattati in versione informatica o cartacea, secondo modalità strettamente strumentali ai SERVIZI FISCOSPORT.<br /> Essi saranno trattati direttamente dalle nostre aziende, da ns. dipendenti e/o collaboratori, dai nostri Consulenti FISCOSPORT.<br /> I Suoi dati non potranno essere da noi comunicati ad altri.<br /> La informiamo inoltre, che ai sensi del citato decreto, Lei ha il diritto di conoscere, aggiornare, cancellare, rettificare i Suoi dati o opporsi all'utilizzo degli stessi, se trattati in violazione della legge.<br /> Onde permettere al nostro server il riconoscimento automatico dell'utente ed evitare così ogni volta la digitazione di login e password, le Sue informazioni saranno registrate in un cookie sul Suo computer e saranno utilizzate automaticamente quando Lei visiterà il sito www.fiscosport.it
+
+              <%= Setting.template_privacy %>
 
             </div>
           </div>
