--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -135,7 +135,7 @@
       <%= render_navigation(:level => 1) %>
     </nav>
     <div id="fs-tramenu-wrapper">
-      <%= render :partial => 'tramenu_block' %>
+      <%= render :partial => 'editorial/tramenu_block' %>
 
     </div>
     <nav class="fs-menu2-nav clearfix">
@@ -145,7 +145,7 @@
     <div class="fs-layout-wrapper clearfix">
       <div class="fs-content-layout">
         <div class="fs-content-layout-row">
-
+          <%= render_flash_messages %>
           <%= yield %>
         </div>
       </div>
@@ -159,7 +159,6 @@
 
   </div>
   <div class="fs-page-footer">
-    <%= render_flash_messages %>
     <div class="clearfix"></div>
     <span id="fs-footnote-links"><a href="http://www.fiscosport.it/" target="_blank">Privacy </a> | site created by collaborations.</span>
   </div>
