--- a/app/views/layouts/mailer_textile.html.erb
+++ b/app/views/layouts/mailer_textile.html.erb
@@ -25,9 +25,9 @@ hr {
 </style>
 </head>
 <body>
-<span class="header"><%= Setting.emails_header %></span>
+<span class="header"><%= Redmine::WikiFormatting.to_html(Setting.text_formatting, Setting.emails_header) %></span>
 <%= yield %>
 <hr />
-<span class="footer"><%= Setting.emails_footer %></span>
+<span class="footer"><%= Redmine::WikiFormatting.to_html(Setting.text_formatting, Setting.emails_footer) %></span>
 </body>
 </html>
