styling contattami per evento

--- a/app/views/editorial/_blocco_semplice.html.erb
+++ b/app/views/editorial/_blocco_semplice.html.erb
@@ -1,7 +1,7 @@
 <div class="fs-box fs-block">
   <div class="fs-box-body fs-block-body">
     <div class="fs-bar fs-blockheader">
-      <h3 class="t">Nuovo Blocco</h3>
+      <h3 class="t">contattaci</h3>
     </div>
 
     <div class="fs-box fs-blockcontent">
