--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -403,24 +403,42 @@ h3.fs-postheader {
 }
 
 .fs-chisiamo-item2 {
-    width: 50%;
+    width: 48%;
     float: left;
+    display: table;
+    margin: 5px;
 }
 
 .fs-chisiamo-item {
     width: 100%;
     float: left;
+    display: table;
+    margin: 5px;
 }
-
-.fs-chisiamo-item img, .fs-chisiamo-item2 img {
+.fs-chisiamo-item .fs-my-avatar-m{
+    width: 80px;
     float: left;
+
+}
+ /*
+.fs-chisiamo-item img, .fs-chisiamo-item2 img {
+  float: left;
     border-right: 15px;
     border-bottom: 10px;
-}
 
+}
+*/
 .fs-chisiamo-item p, .fs-chisiamo-item2 p {
-    padding-top: 20px;
-    line-height: 1.5em;
+   line-height: 1.5em;
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+
+}
+.fs-chisiamo-item span, .fs-chisiamo-item2 span {
+max-width: 240px;
+border:dotted 1px #febb51;
+    margin-left:8px ;
 }
 
 .fs-chisiamo-item a, .fs-chisiamo-item2 a {
@@ -1088,6 +1106,16 @@ right: -14px;   */
 
 /* fine blocco edizioni */
 /* inizio  convegni */
+#fs-events-contact{
+    background-color: #ffffff;
+    background-image: url("/images/commons/event-contact-me.jpg") ;
+    background-repeat: no-repeat;
+    background-position: top left;
+    width: 248px;
+    height: 177px;
+    content: "";
+}
+
 .fs-post-convegni {
     background: #FFFFFF;
     -webkit-border-radius: 1px;
@@ -1097,7 +1125,7 @@ right: -14px;   */
     -moz-box-shadow: 0 0 3px 2px rgba(201, 50, 20, 0.9);
     box-shadow: 0 0 3px 2px rgba(238, 232, 170, 0.9);
     /* padding: 7px;                */
-    width: 99%;
+    width: 100%;
     margin-top: 1px;
 }
 
