--- a/app/views/editorial/_tramenu_assos.html.erb
+++ b/app/views/editorial/_tramenu_assos.html.erb
@@ -2,9 +2,9 @@
 
 <!--  <li> <%# image_tag("/images/banners/"+ ban.banner , :alt => ban.espositore, :width =>80) %> <%# ban.didascalia %> </li> -->
 <%# end %>
-<p class="fs-tramenu-blockheader x-blue">Associazioni aderenti a Fiscosport</p>
-<div class="list_assos_carousel">
-  <ul id="carousel_assos_js" class="hide">
+<p class="fs-tramenu-blockheader x-blue">Associazioni aderenti a Fiscosport a</p>
+<div class="list_assos_carousel" style="height:100px; overflow: hidden;" >
+  <ul id="carousel_assos_js">
 
     <li><img src="/images/banners/1.jpg" alt="basketball"/> <span> 1 didascalia 1 </span></li>
     <li><img src="/images/banners/2.jpg" alt="beachtree"/> <span> 2 didascalia 2 </span></li>
