--- a/app/views/account/_tramenu_login.html.erb
+++ b/app/views/account/_tramenu_login.html.erb
@@ -45,16 +45,6 @@
               </div>
           <% end %>
       <% end %>
-      <!--
-      <% if User.current.responsable? && User.current.responsable_of
-              User.current.responsable_of.each do |organismo| %>
-            <div class="fs-login" id="fs-login2-txt">
-              <span> Responsabile di:</span>
-                <%= link_to h(organismo), organismo_path(organismo) %>
-              <% end
-       end %>
-    </ul>
-      <div class="fs-logged2-ico"> -->
       <% if User.current.organization() %>
         <div class="fs-login" id="fs-login2-asso">
           <%= image_tag "/images/banners/assos/#{ User.current.asso.logo}", :width => 50, :height => 50, :border => 0 %>
@@ -98,3 +88,43 @@
       <% end %>
   </div>
 <% end %>
+
+<!--
+      <% if User.current.responsable? && User.current.responsable_of
+              User.current.responsable_of.each do |organismo| %>
+            <div class="fs-login" id="fs-login2-txt">
+              <span> Responsabile di:</span>
+                <%= link_to h(organismo), organismo_path(organismo) %>
+              <% end
+       end %>
+    </ul>
+      <div class="fs-logged2-ico">
+
+<div class="hide2">
+<% if User.current && User.current.logged? %>
+  <% if User.current.canbackend? %>
+    <%= link_to '====Accesso al backend====', home_path %>
+  <% else %>
+    STATO: <%= get_status_role(User.current) %>  --  SCADENZA: <%= getdate(User.current.scadenza) %>  -- <%= User.current.scadenza_fra  %>
+    <% if User.current.isregistered? %>
+      Periodo di prova. fatto il ... scade il ... Verificare se ha confermato email?
+    <% end %>
+    <% if User.current.isabbonato? %>
+      Il tuo abbonamento scade il <%= User.current.scadenza %>
+    <% end %>
+    <% if User.current.isrenewing? %>
+      Sei normalmente abbonato. Il tuo abbonamento scade fra <%= User.current.scadenza_fra %>&nbsp;<%= link_to 'Rinnovalo', contatti_path %>
+    <% end %>
+    <% if User.current.isexpired? %>
+      SIAMO SPIACENTI però il tuo abbonamento è scaduto.
+      <%= link_to 'Rinnovalo', contatti_path %>
+    <% end %>
+    <% if User.current.isarchivied? %>
+      SIAMO SPIACENTI però non hai più accesso a questo editoriale
+      <%= link_to 'Contattaci', contatti_path %>
+    <% end %>
+
+  <% end %>
+<% end %>
+</div>
+-->
